# ovpspee-filing-system

./: .editorconfig  .env.example  .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vitest.config.ts
docs/: 00_Index.md  (+16 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-019cf9102fc1b886d82b6a560be68c26673b6b4953fa9fa24b7ceeb8b32a5af4.json  query-03bd4e820bcb5edb5ccd2be3b5ffbd2f3ca22a1adcf098e291c8d68cce2e9dd3.json  query-05bb48d3b4bc9670311233bd20acee2136e34509d846829958cdafa2ed8027d0.json  query-0801a0e742412e5b59d4d9db9531c7ef3f73ebfd35d97e9deaa2d29b6be571b0.json  query-09c35b51abf9018b88b0668ba0f101f6c7bd96eaf1ffda9811be271ef3af2a83.json  query-0c4fc4698b034b329b2d47486dddf491452073769dc5b318f332c6ee5807fc9c.json  query-0eaba4fa954793512a4907c7e2a357522874d9461a3ab9e1efc959b3b39046c7.json  query-0f553411f7613669c0a9b9873f471012c604757fb80206b926cba9c9844fe354.json  query-11b2e65ae7046c6b9599604ff8df956f991560e705ffe33e1df797d52e81a4ed.json  query-13a25c889941a3909639ab0e9245216032ce92fb30203e557abc203f2bb65295.json  query-148f1e98203f8c212a1297752544cd1aaa1d23b922310c967109767f90cb9032.json  query-1c41489c15ab1a8337874f83a8b8db6a86de860dc3b7de600ba6536b0c925863.json  query-1c61c0adc86a6b70232a309168b15cabc4d5db4fdc4966f06b954c26dfda3092.json  query-1f27bf552f0c63a0050e63774329a5a5c98be64e1e481f12d2e5517e01f2c64b.json  query-2242bcda5850eee6c5bbd081f2fa57b6dd1c54c043657f3cfb954a9a6e0ca2fb.json  query-24312c4f02e3fe82cb24bec62294e264335b4e38a7f327401e5745c429f77fd4.json  query-282902269208df3719a6309b2e89c1c9cae42cf24964fe9be7cdee9cf7dee61a.json  query-32b53ac3b9414272cd115559ebabbacb14a2373e3fd662c2f775d55b2d8c26d5.json  query-384f4ca5de940a3c38fe8697395921d7d707b2bba46d62cec3923220b15bde63.json  query-3a30ba42c41d4b25f8b2a3bce10162fc506b23b4f3aa714e90d5570a1faaf0e3.json  query-3acf2ec1482c55edc7ea3796468372948b57a628c25c18d785d6de00ff0acead.json  query-3c153d7a086c03c322dcd9073b318590362bb03f65d0655082b1f5ea7fa44c63.json  query-441caab5e4c1f060f00d438096dfd11e46f127f0c91ed742581be5a0e961f212.json  query-49c008bb840bde08381a8f211f86c9a44949fd440928c67d7954b6cba71c64a1.json  (+64 more)
(+202 files in other folders)
