[package]
name = "ovpspee-filing-system"
version = "0.2.2"
edition = "2021"

[lib]
name = "ovpspee_filing_system"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
argon2 = "0.5"
axum = { version = "0.8.9", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid", "migrate"] }
printpdf = { version = "0.7", default-features = false, features = ["embedded_images"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4", "serde"] }
tauri-plugin-dialog = "2.7.1"
sha2 = "0.10"
base64 = "0.22"
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
